<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.ui.detail.DetailFragment">

    <data>

        <variable
            name="viewModel"
            type="com.adityawidayanto.movies.view.ui.detail.DetailViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/topBarCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                app:cardMaxElevation="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/posterTopBar"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:contentDescription="@string/poster"
                        android:background="@drawable/ic_launcher_background"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher_foreground" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/titleDetail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            android:text="@{viewModel.detail.title}"
                            android:textAlignment="textEnd"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toTopOf="@+id/date"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/border_view" />

                        <TextView
                            android:id="@+id/date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            android:text="@{viewModel.detail.releaseDate}"
                            android:textAlignment="textEnd"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/border_view" />

                        <View
                            android:id="@+id/border_view"
                            android:layout_width="120dp"
                            android:layout_height="180dp"
                            android:layout_marginStart="16dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/subPoster"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:layout_marginStart="16dp"
                android:adjustViewBounds="true"
                android:background="@drawable/ic_launcher_background"
                android:contentDescription="@string/poster_desc"
                android:elevation="10dp"
                android:src="@drawable/ic_placeholder"
                app:layout_constraintBottom_toBottomOf="@+id/topBarCardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topBarCardView" />

            <ToggleButton
                android:id="@+id/btn_favorite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topBarCardView"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/favorite_toggle"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textOff=""
                android:textOn="" />


            <TextView
                android:id="@+id/voteAverage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/vote_average"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/subPoster"
                app:layout_constraintTop_toBottomOf="@+id/topBarCardView" />

            <TextView
                android:id="@+id/vote_average_val"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{String.valueOf(viewModel.detail.voteAverage)}"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/voteAverage"
                app:layout_constraintTop_toBottomOf="@+id/topBarCardView"
                tools:text="7.9" />

            <TextView
                android:id="@+id/vote_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/vote_count"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/subPoster"
                app:layout_constraintTop_toBottomOf="@+id/voteAverage" />

            <TextView
                android:id="@+id/vote_count_val"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{String.valueOf(viewModel.detail.voteCount)}"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/vote_count"
                app:layout_constraintTop_toBottomOf="@+id/voteAverage"
                tools:text="7.9" />

            <TextView
                android:id="@+id/titleOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/overview_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subPoster" />

            <View
                android:id="@+id/dividerBody"
                android:layout_width="100dp"
                android:layout_height="3dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleOverview" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewModel.detail.overview}"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerBody"
                tools:text="@string/overview" />

            <TextView
                android:id="@+id/title_popularity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/popularity_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview" />

            <View
                android:id="@+id/dividerPopularity"
                android:layout_width="100dp"
                android:layout_height="3dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_popularity" />

            <TextView
                android:id="@+id/popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@{String.valueOf(viewModel.detail.popularity)}"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerPopularity" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>